--- a/Nawigacja - Michał Pieczka/Nawigacja - Michał Pieczka.csproj
+++ b/Nawigacja - Michał Pieczka/Nawigacja - Michał Pieczka.csproj
@@ -158,8 +158,14 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="GeoCoordinate.NetCore">
+      <Version>1.0.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.11</Version>
+      <Version>6.2.12</Version>
+    </PackageReference>
+    <PackageReference Include="NEST">
+      <Version>7.12.1</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
